--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
   
   for(var key in result[i].marks)
     document.write(key +":"+ result[i].marks[key],"<br>")
-    // document.write(result[i].marks[key],"<br>")
+    
   }
 </script>
 </body>
@@ -114,7 +114,7 @@
 
 <p>Table Here</p>
 <script>
-    var tr = [
+    var result = [
 {
   "name": "John",
   "marks": {
@@ -162,8 +162,8 @@
       }
     }
 ]
-const data=JSON.parse(myjson);
-x=data.result.length;
+// const data=JSON.parse(myjson);
+// x=data.result.length;
 {
 var table = "<table border=1>";
       table += `<tr>
@@ -178,17 +178,17 @@ var table = "<table border=1>";
                   <th>Chemistry</th>
                   <th>Physics</th>
                 </tr>`;
-    var tr="";     
-    for(let i=0; i<result.length; i++)
-    {
-      tr += "<tr>";
-      tr += `<td>${result[i].name}</td>`;
-      for (var key in result[i].marks) {
-      tr += `<td>${result[i].marks[key]}</td>`;
-  }
-  tr += "</tr>"
-}
-  table += tr + "</table>";
+//     var tr="";     
+//     for(let i=0; i<data.result.length; i++)
+//     {
+//       tr += "<tr>";
+//       tr += `<td>${data.result[i].name}</td>`;
+//       for (var key in data.result[i].marks) {
+//       tr += `<td>${data.result[i].marks[key]}</td>`;
+//   }
+//   tr += "</tr>"
+// }
+//   table += tr + "</table>";
   document.write(table);
    
     
