--- a/index.html
+++ b/index.html
@@ -161,9 +161,7 @@
         "physics": "92"
       }
     }
-]
-// const data=JSON.parse(myjson);
-// x=data.result.length;
+] 
 {
 var table = "<table border=1>";
       table += `<tr>
@@ -178,8 +176,8 @@ var table = "<table border=1>";
                   <th>Chemistry</th>
                   <th>Physics</th>
                 </tr>`;
-//     var tr="";     
-//     for(let i=0; i<data.result.length; i++)
+    // var tr="";     
+    // for(let i=0; i<result.length; i++)
 //     {
 //       tr += "<tr>";
 //       tr += `<td>${data.result[i].name}</td>`;
