--- a/index.html
+++ b/index.html
@@ -176,8 +176,8 @@ var table = "<table border=1>";
                   <th>Chemistry</th>
                   <th>Physics</th>
                 </tr>`;
-    // var tr="";     
-    // for(let i=0; i<result.length; i++)
+//     var result="";     
+//     for(let i=0; i<result.length; i++)
 //     {
 //       tr += "<tr>";
 //       tr += `<td>${data.result[i].name}</td>`;
